# PPP3

./: .gitignore  ERRORS.md  NOTES.md  README.md
01 Hello World/Hello World/: CMakeLists.txt  main.cpp
05 Writing a program/05.03.01 calculator first attempt/: CMakeLists.txt  main.cpp
05 Writing a program/my_calculator_attempt/: CMakeLists.txt  Expression.cpp  Expression.h  Primary.cpp  Primary.h  Term.cpp  Term.h  Token.cpp  Token.h  TokenStream.cpp  TokenStream.h  headers.h  main.cpp
07 Technicalities/07 Drill 01/: CMakeLists.txt  main.cpp
07 Technicalities/07 Drill 02 Namespaces/: CMakeLists.txt  main.cpp
07 Technicalities/07 Ex 02 Print vector of ints/: CMakeLists.txt  main.cpp
07 Technicalities/07 Ex 03 Fibbonaci/: CMakeLists.txt  main.cpp
07 Technicalities/07 Ex 05 Reverse vector of ints/: CMakeLists.txt  main.cpp
07 Technicalities/07.02 try this declarations/: CMakeLists.txt  main.cpp
07 Technicalities/07.03 try this indents/: CMakeLists.txt  main.cpp
07 Technicalities/07.04.06 testing const ref/: CMakeLists.txt  main.cpp
07 Technicalities/07.04.09 constexpr consteval functions/: CMakeLists.txt  main.cpp
07 Technicalities/07.04.10 suffix return type notation/: CMakeLists.txt  main.cpp
07 Technicalities/07.05 constructing within a loop/: CMakeLists.txt  main.cpp
08 Classes/08 Drill Date/: CMakeLists.txt  Date.cpp  Date.h  Day.cpp  Day.h  Month.cpp  Month.h  Year.cpp  Year.h  main.cpp  (+2 more)
PPP2 exercises/practice/hello_headers/: CMakeLists.txt  main.cpp
PPP_support/: CLion template for main cpp.txt  PPP.h  PPP_support.h  PPPheaders.h
(+176 files in other folders)
