cmake_minimum_required(VERSION 3.28)
project(hello_headers)

set(CMAKE_CXX_STANDARD 26)

add_executable(hello_headers main.cpp
#        /Users/orlandoshamlou/Documents/Coding/CPP_CLion/PPP_support/PPPheaders.h
#        /Users/orlandoshamlou/Documents/Coding/CPP_CLion/PPP_support/PPP_support.h)
    )